--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul class="nav">
         <li class="nav-item"><a class="nav-link text-white" href="#">Inicio</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="#">Servicios</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#">Contacto</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="pages/contacto.html">Contacto</a></li>
       </ul>
     </nav>
   </div>
