Mejoras en style.css: reseteo, botones, footer y columnas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     crossorigin="anonymous"
   >
 
-  <!-- Tu propio CSS -->
+  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
