--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1 class="h4 m-0">Mi Sitio</h1>
       <ul class="nav">
         <li class="nav-item"><a class="nav-link text-white" href="#">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#">Servicios</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="pages/servicios.html">Servicios</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="pages/contacto.html">Contacto</a></li>
       </ul>
     </nav>
