--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contacto</title>
+  <title>Servicios</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../style.css" />
 </head>
@@ -23,22 +23,8 @@
   </header>
 
   <section class="container py-5">
-    <h2 class="mb-4">Contacto</h2>
-    <form>
-      <div class="mb-3">
-        <label for="nombre" class="form-label">Nombre</label>
-        <input type="text" class="form-control" id="nombre" placeholder="Tu nombre" />
-      </div>
-      <div class="mb-3">
-        <label for="email" class="form-label">Correo electrónico</label>
-        <input type="email" class="form-control" id="email" placeholder="nombre@ejemplo.com" />
-      </div>
-      <div class="mb-3">
-        <label for="mensaje" class="form-label">Mensaje</label>
-        <textarea class="form-control" id="mensaje" rows="4"></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary">Enviar</button>
-    </form>
+    <h2 class="mb-4">Nuestros Servicios</h2>
+    <p>En esta sección puedes detallar los servicios que ofreces.</p>
   </section>
 
   <footer class="bg-dark text-white text-center py-3 mt-5">
